// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addSplitPause() Adds different even split pause around strings. 1`] = `
Array [
  Array [
    [Function],
    250,
  ],
  Array [
    [Function],
    Object {
      "content": "A",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "B",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "C",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    500,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    500,
  ],
  Array [
    [Function],
    Object {
      "content": "E",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "F",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "G",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isLast": true,
    },
  ],
]
`;

exports[`addSplitPause() Adds even split pause around strings. 1`] = `
Array [
  Array [
    [Function],
    250,
  ],
  Array [
    [Function],
    Object {
      "content": "A",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "B",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "C",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": "E",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "F",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "G",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isLast": true,
    },
  ],
]
`;

exports[`addSplitPause() Adds split pause around strings when value is array. 1`] = `
Array [
  Array [
    [Function],
    250,
  ],
  Array [
    [Function],
    Object {
      "content": "A",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "B",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "C",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": ABC,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    100,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    500,
  ],
  Array [
    [Function],
    Object {
      "content": "E",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isFirst": true,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "F",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
  ],
  Array [
    [Function],
    Object {
      "content": "G",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": EFG,
    },
    Object {
      "isLast": true,
    },
  ],
]
`;

exports[`addSplitPause() Inserts split pause around multiple strings. 1`] = `
Array [
  Array [
    [Function],
    250,
  ],
  Array [
    [Function],
    Object {
      "content": "A",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": A,
    },
    Object {
      "isFirst": true,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": "B",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": B,
    },
    Object {
      "isFirst": true,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": "C",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": C,
    },
    Object {
      "isFirst": true,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": "D",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": D,
    },
    Object {
      "isFirst": true,
    },
    Object {
      "isLast": true,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": <br />,
      "isHTMLElement": true,
      "isTopLevelText": false,
      "node": null,
    },
  ],
  Array [
    [Function],
    375,
  ],
  Array [
    [Function],
    Object {
      "content": "E",
      "isHTMLElement": false,
      "isTopLevelText": true,
      "node": E,
    },
    Object {
      "isFirst": true,
    },
    Object {
      "isLast": true,
    },
  ],
]
`;
